tests/wpt/tests/third_party/test262/test/built-ins/RegExp/property-escapes/non-binary-property-without-value-Script-equals.js
// Copyright 2018 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  Non-binary properties without a value must throw in Unicode property escapes.
esid: sec-static-semantics-unicodematchproperty-p
negative:
  phase: parse
  type: SyntaxError
features: [regexp-unicode-property-escapes]
---*/

$DONOTEVALUATE();

/\p{Script=}/u;
